# aws-pipeline

./: .dockerignore  .gitignore  pyproject.toml
docker/: Dockerfile
src/pipeline_step1/: cli.py
src/pipeline_step2/: cli.py
terraform/: ecr.tf  main.tf
terraform/users/: container.tf  developers.tf
