[tool.poetry]
name = "aws-pipeline"
version = "0.1.0"
description = ""
authors = ["Tomasz Wrona <tomasz@wrona.me>"]
packages = [
    { include = "pipeline_step1", from = "src" },
    { include = "pipeline_step2", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.29"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
mypy = "^0.961"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
